# libneo

./: .f2py_f2cmap  .fprettify  .git-blame-ignore-revs  .gitignore  BACKLOG.md  BATCH_SPLINES_IMPLEMENTATION.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSources.in  CODING_STANDARD.md  DESIGN.md  DRAFT_PR.md  Dockerfile  LICENSE  Makefile  README.md  TEST_SUMMARY.md  THIRD_PARTY.md  TODO.md  bind.toml  build.sh  flake.nix  fpm.toml  index.html  install_deps.sh  pyproject.toml  pytest.ini  requirements.txt
bench/spline_many/: BENCHMARK_RESULTS.md  CMakeLists.txt  README.md  run_benchmarks.sh
draft/gpu_spline_1d_many/: CMakeLists.txt  README.md  run_benchmarks.sh
extra/MyMPILib/: 0_README  CMakeLists.txt  ProjectConfig.cmake.in  ProjectConfig.cmake.sample
src/: CMakeLists.txt  arnoldi.f90  binsrc.f90  boozer.f90  boozer_chartmap.f90  boozer_chartmap_types.f90  boozer_converter.F90  boozer_converter.f90  canonical_coordinates_mod.f90  efit_to_boozer  fftw3.F90  fftw3.f90  get_canonical_coordinates.f90  interpolate.f90  io.f90  libneo_kinds.f90  local_rusage.c  math_constants.f90  nctools_module.f90  new_vmec_allocation_stuff.f90  ode_integration.f90  odeint_allroutines.f90  odeint_rkf45.f90  plag_coeff.f90  poincare.f90  poincare_plot.f90  rusage_type.f90  solve_system.f90  solve_systems.f90  spl_three_to_five.f90  spline_vmec_data.f90  system_utility.f90  util.f90  vmecinm_m.f90
src/MC/: alpha_lifetime_mod.f90  chamb_divB0.f90  collis_nbi.f90  rng.f90  sub_alpha_lifetime.f90
src/MyMPILib/: .gitignore  CMakeLists.txt
src/collisions/: CMakeLists.txt  collision_freqs.f90  perp_coll_frequency.f90
src/contrib/: CMakeLists.txt  minpack_interfaces.f90  rkf45.f90
src/coordinates/: CMakeLists.txt  babin_boundary.f90  cylindrical_cartesian.f90  flux_pseudocartesian.f90  geoflux_coordinates.f90  gframe_boundary.f90  libneo_chartmap_vmec_generator.f90  libneo_coordinate_conventions.f90  libneo_coordinates.f90  libneo_coordinates_babin.f90  libneo_coordinates_base.f90  libneo_coordinates_chartmap.f90  libneo_coordinates_chartmap_impl.inc  libneo_coordinates_chartmap_validator.f90  libneo_coordinates_file_detection.f90  libneo_coordinates_geoflux.f90  libneo_coordinates_gframe.f90  libneo_coordinates_mapping.f90  libneo_coordinates_merged.f90  libneo_coordinates_spectre.f90  libneo_coordinates_validator.f90  libneo_coordinates_vmec.f90  vmec_coordinates.f90
src/efit_to_boozer/: CMakeLists.txt  bdivfree_coul.f90  binsrc.f90  efit_to_boozer.f90  efit_to_boozer_mod.f90  efit_to_boozer_python.f90  field_divB0.f90  field_line_integration_for_Boozer.f90  field_line_integration_for_converter.f90  hamada_to_boozer.f90  preload_for_SYNCH.f90  read_boozer_file_for_plotting.f90  rhs.f90  rhs_converter.f90  spl_three_to_five_mod.f90  spline5_RZ.f90  spline_and_interpolate_magdata.f90  surfplotter.f90
src/f2py_interfaces/: f2py_biotsavart.f90  f2py_field_divb0.f90  f2py_magfie.f90  f2py_vmec_support.f90  f2py_vmec_wrappers.f90
src/field/: CMakeLists.txt  bc_file.f90  biotsavart.f90  biotsavart_field.f90  boozer_chartmap_io.f90  boozmn_file.f90  boozmn_reader.f90  circular_tokamak_field.f90  example_field.f90  field.f90  field_base.f90  field_mesh.f90  field_netcdf.f90  field_spectre.f90  jorek_bezier.f90  jorek_field.f90  jorek_field_values.f90  jorek_model303_field.f90  jorek_restart.f90  libneo_example_field.f90  libneo_field.f90  libneo_field_base.f90  mesh.f90  mesh_2d.f90  mgrid.f90  polylag_field.f90  spline_field.f90
src/hdf5_tools/: CMakeLists.txt  hdf5_tools.F90  hdf5_tools.f90  hdf5_tools_f2003.f90
src/interpolate/: CMakeLists.txt  acc_spline_build_order5.f90  acc_tridiag_pcr.f90  batch_interpolate.f90  batch_interpolate_1d.F90  batch_interpolate_1d.f90  batch_interpolate_2d.f90  batch_interpolate_3d.F90  batch_interpolate_3d.f90  batch_interpolate_types.f90  cgls_dense.f90  cgls_small.f90  interpolate.f90  neo_bspline.f90  neo_bspline_3d.f90  neo_bspline_base.f90  neo_bspline_interp.f90  neo_bspline_lsq.f90  openacc_stubs.f90  spline1d_many_point_body.inc  spline2d_many_point_body.inc  spline3d_many_point_body.inc  spline3d_o555_k1_reduce_many.inc  spline3d_o555_k1_reduce_nq1.inc  spline3d_o555_k2_reduce_many.inc  spline3d_o555_k2_reduce_nq1.inc  spline3d_o555_k3_reduce_many.inc  spline3d_o555_k3_reduce_nq1.inc  spline3d_o555_point_setup.inc
src/magfie/: CMakeLists.txt  Makefile  amn_mod.f90  analytical_geoflux_field.f90  analytical_gs_circular.f90  analytical_gs_solver.f90  analytical_tokamak_field.f90  bdivfree.f90  bdivfree_mod.f90  coil_convert.f90  coil_tools.f90  extract_fluxcoord_mod.f90  field_c_mod.f90  field_divB0.f90  field_eq_mod.f90  field_mesh3d.f90  field_mod.f90  geoflux_field.f90  geqdsk_tools.f90  input_files.f90  inthecore_mod.f90  magfie_cyl.f90  magfie_vmec.f90  magfield_mod.f90  neo_magfie_mod.f90  period_mod.f90  polylag_3.f  polylag_5.f  spline5_RZ.f90  standardise_geqdsk.f90  theta_rz_mod.f90  vacfield.f90  vector_potential.f90  vvnqiwkas.f
src/math/: CMakeLists.txt  bessel_i.f90  bessel_k.f90  dawson.f90  fft.f90  gauss_kronrod.f90  gauss_quadrature.f90
src/nctools/: CMakeLists.txt  nctools_module.f90
src/odeint/: CMakeLists.txt  odeint_allroutines.f90
src/poincare_plot/: CMakeLists.txt  poincare_plot.f90
src/polylag/: CMakeLists.txt  polylag_5.f90
src/species/: CMakeLists.txt  species.f90
src/spectre/: spectre_basis.f90  spectre_reader.f90
src/transport/: CMakeLists.txt  gen_laguerre_rule.f90  transport.f90
src/util/: CMakeLists.txt  binsrc.f90  math_constants.f90  rusage_type.f90  simpson_integration.f90  util.f90
src/vmec/: vmec_field_tools.f90
src/vmec_support/: CMakeLists.txt  canonical_coordinates_mod.f90  new_vmec_allocation_stuff.f90  spline_vmec_data.f90  vmecinm_m.f90
test/: CMakeLists.txt  branches.json  index.html  run_test_arnoldi.cmake  test_spline_vmec_array_temps.f90
test/cmake/: check_deterministic_fp_flags.cmake
test/collisions/: test_collision_freqs.f90  test_incomplete_gamma_gsl_oracle.f90  test_perp_coll_frequency.f90
test/field/: CMakeLists.txt  test_field.f90  (+19 more)
tests/: CMakeLists.txt
(+993 files in other folders)
