[build-system]
requires = [
    "scikit-build-core",
    "numpy",
    "f90wrap @ git+https://github.com/jameskermode/f90wrap.git",
]
build-backend = "scikit_build_core.build"

[project]
name = "libneo"
version = "0.0.3"
dependencies = ["numpy"]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
chartmap = [
    "netCDF4",
    "map2disc @ git+https://gitlab.mpcdf.mpg.de/gvec-group/map2disc.git",
    "shapely",
    "scipy",
    "trimesh",
]
dev = [
    "scipy",
    "shapely",
    "matplotlib",
    "netCDF4",
    "trimesh",
    "map2disc @ git+https://gitlab.mpcdf.mpg.de/gvec-group/map2disc.git",
]

[project.scripts]
libneo-write-chartmap = "libneo.chartmap_cli:main"

[tool.scikit-build]
build-dir = "build/skbuild"
build.verbose = true

[tool.scikit-build.wheel.packages]
libneo = "python/libneo"
efit_to_boozer = "python/efit_to_boozer"
